--- a/.github/workflows/github-actions-ec2.yml
+++ b/.github/workflows/github-actions-ec2.yml
@@ -13,17 +13,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout the files
+      - name: Checkout the files 123
         uses: actions/checkout@v2
 
-      - name: Deploy to server 1
-        uses: easingthemes/ssh-deploy@main
-        env: 
-          SSH_PRIVATE_KEY: ${{ secrets. EC2_SSH_KEY }}
-          REMOTE_HOST: ${{ secrets.HOST_DNS }}
-          REMOTE_USER: ${{ secrets. USERNAME }}
-          TARGET: ${{ secrets. TARGET_DIR}}
-
+  
       - name: Executing remote ssh commands using ssh key
         uses: appleboy/ssh-action@master
         with:
@@ -31,10 +24,6 @@ jobs:
           username: ${{ secrets. USERNAME }}
           key: ${{ secrets. EC2_SSH_KEY }}
           script: |
-            sudo apt-get -y update
-            sudo apt-get install -y apache2
-            sudo systemctl start apache2
-            sudo systemctl enable apache2
-            cd home
-            sudo mv * /var/www/html
+            cd git-actions-repo
+            sh deploy.sh
         
