--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,4 +13,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - name: Checkout the files 123
+        uses: actions/checkout@v2
+
+  
+      - name: Executing remote ssh commands using ssh key
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets. HOST_DNS }}
+          username: ${{ secrets. USERNAME }}
+          key: ${{ secrets. EC2_SSH_KEY }}
+          script: |
+            cd git-actions-repo
+            sh deploy.sh
