--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,7 +1,6 @@
 name: push-to-EC2
 
-#trigger deployment when something pushed to main branch
-
+# Trigger deployment when something is pushed to the main branch
 on:
   push:
     branches:
@@ -9,20 +8,19 @@ on:
 
 jobs:
   deploy:
-    name: Deploy to EC2 on master branch push
+    name: Deploy to EC2 on main branch push
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout the files 123
+      - name: Checkout the repository
         uses: actions/checkout@v2
 
-  
-      - name: Executing remote ssh commands using ssh key
-        uses: appleboy/ssh-action@master
+      - name: Executing remote SSH commands using SSH key
+        uses: appleboy/ssh-action@v0.1.3
         with:
-          host: ${{ secrets. HOST_DNS }}
-          username: ${{ secrets. USERNAME }}
-          key: ${{ secrets. EC2_SSH_KEY }}
+          host: ${{ secrets.HOST_DNS }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd git-actions-repo
             sh deploy.sh
