--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,9 +22,7 @@ jobs:
             USER_NAME: ${{secrets.USERNAME }}
             
         run: |
-          echo "$PRIVATE_KEY" > private_key && chmod 400 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME}
-          echo "success" > /tmp/success
+          echo "$PRIVATE_KEY" > private_key && chmod 400 private_key && ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} && echo "success" > /tmp/success
           mkdir rakesh
        
          
