--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -24,8 +24,8 @@ jobs:
         run: |
           echo "$PRIVATE_KEY" > private_key && chmod 400 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
-               echo "success" > /tmp/success && mkdir rakesh
-               cd git-actions-repo
+               echo "success" > /tmp/success && mkdir rakesh &&
+               cd git-actions-repo &&
                sh deploy.sh
           '
        
