--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -25,8 +25,9 @@ jobs:
           echo "$PRIVATE_KEY" > private_key && chmod 400 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
                echo "success" > /tmp/success &&
-               cd git-actions-repo &&
-               sh deploy.sh
+               chmod +x git-actions-repo/clone_or_pull.sh
+               .git-actions-repo/clone_or_pull.sh
+               
           '
        
          
