declared root to clone-or-pull.sh

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -25,8 +25,8 @@ jobs:
           echo "$PRIVATE_KEY" > private_key && chmod 400 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
                echo "success" > /tmp/success &&
-               chmod +x clone_or_pull.sh
-               sh clone_or_pull.sh
+               chmod +x ./clone_or_pull.sh
+               sh ./clone_or_pull.sh
                
           '
        
