--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -25,7 +25,7 @@ jobs:
           echo "$PRIVATE_KEY" > private_key && chmod 400 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} && '
                echo "success" > /tmp/success &&
-               cd ./clone_or_pull.sh &&
+               cd ./git-actions-repo &&
                chmod +x clone_or_pull.sh &&
                sh clone_or_pull.sh               
           '
