--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -25,8 +25,7 @@ jobs:
           echo "$PRIVATE_KEY" > private_key && chmod 400 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} && '
                echo "success" > /tmp/success &&
-               cd /home/ubuntu/my-repo &&
-               sh deploy.sh               
+               cd /home/ubuntu/my-repo                
           '
        
          
